syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.peng.gprc_hook_in.keyserver";
option java_outer_classname = "KeyServerProto";
option objc_class_prefix = "HLW";

package proto;

message PublicKeyRequest {
    string client = 1;
}

message PublicKeyResponse {
    bytes key = 1;
}

service KeyServerService {
    rpc GetPublicKey (PublicKeyRequest) returns (PublicKeyResponse);
}